--- a/map.html
+++ b/map.html
@@ -11,7 +11,10 @@
 
     <!-- Font Awesome icons -->
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
-
+    
+    <!-- Add current location map -->
+    <script src="https://cdn.klokantech.com/maptilerlayer/v1/index.js"></script>
+    
     <!-- Scripts do Firebase -->
     <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
     <script>
