--- a/map.html
+++ b/map.html
@@ -71,7 +71,8 @@
               <li class="presentation"><a class="link mapa active" href="map.html">Mapa</a></li>
               <li class="presentation"><a class="link vai-chover" href="weather.html">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
-              <li class="presentation"><a class="link login" href="login.html">Login</a></li>
+              <li class="presentation"><a class="link login logoff" href="login.html">Login</a></li>
+              <!-- <li class="presentation"><a class="link login loged" id="user" href="login.html"><img src="images/users/pati.jpg"><b>Pati Peti</b>&nbsp;&nbsp;<i class="fa fa-chevron-down" aria-hidden="true"></i></a></li> -->
               <!-- <li class="presentation" id="alagou"><a class="btn-alago" href="#">alagou!</a></li> -->
             </ul>
 
