tela de perfil, botão excluir

--- a/profile.html
+++ b/profile.html
@@ -121,6 +121,7 @@
         </script>
         <br>
         <a href="#" class="save">Salvar</a>
+        <a href="#" class="delete">Excluir</a>
       </div>
     </div>
 
