--- a/index.html
+++ b/index.html
@@ -17,18 +17,8 @@
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- Scripts do Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/3.9.0/firebase.js"></script>
+    <script src="scripts/firebase_config.js"></script>
     <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyBSlSoszFtsCKSjjrwThh3uohVI2sc2wW8",
-        authDomain: "alago-18a8b.firebaseapp.com",
-        databaseURL: "https://alago-18a8b.firebaseio.com",
-        projectId: "alago-18a8b",
-        storageBucket: "alago-18a8b.appspot.com",
-        messagingSenderId: "587953181865"
-      };
-      firebase.initializeApp(config);
     </script>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
