--- a/weather.html
+++ b/weather.html
@@ -122,6 +122,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <script src="scripts/weather.js"></script>
-    <script src="scripts/profile_header.js"></script>
+    <script src="scripts/header_profile.js"></script>
   </body>
 </html>
