controle de perfil e logoff

--- a/profile.html
+++ b/profile.html
@@ -103,6 +103,7 @@
         <label>E-mail</label>
         <input id="email" type="email" value="" disabled="disabled">
         <a href="#" class="button"><i class="fa fa-facebook" aria-hidden="true"></i>Desvincular Facebook</a>
+        <a href="#" id="logOff" class="button" style="background:red"><i class="fa fa-power-off" aria-hidden="true"></i>Sair</a>
       </div>
       <div class="col-md-2"></div>
       <div class="col-md-10 favorites">
