--- a/map.html
+++ b/map.html
@@ -68,7 +68,7 @@
     </div>
     
     <!-- Mapa -->
-    <div id="favorites">
+    <div id="favorites" style="display:none">
       <div class="row">
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
@@ -84,7 +84,7 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts">
-              <h4 class="title">Escola da Pati</h4>
+              <h4 class="title">Escola da Peti</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
@@ -95,7 +95,7 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts">
-              <h4 class="title">Escola da Pati</h4>
+              <h4 class="title">Casa da Pati</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
@@ -106,7 +106,7 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts">
-              <h4 class="title">Escola da Pati</h4>
+              <h4 class="title">Trabalho da Peti</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
@@ -117,7 +117,7 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts">
-              <h4 class="title">Escola da Pati</h4>
+              <h4 class="title">Padaria da Pati</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
@@ -128,7 +128,7 @@
 
       </div>
     </div>
-    <div id="map" class="loged"></div>
+    <div id="map" class="logedOut"></div>
     <script src="scripts/map.js"></script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAQ2acXgmsIhkEqoD1o3_ZU4rtdNP1M66I&callback=initMap">
