--- a/login.html
+++ b/login.html
@@ -34,6 +34,9 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 
+    <!-- This is what you need -->
+    <script src="styles/dist/sweetalert-dev.js"></script>
+    <link rel="stylesheet" href="styles/dist/sweetalert.css">
 
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -44,7 +47,7 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
-    
+
     <!-- modified CSS -->
     <link href="styles/login.css" rel="stylesheet">
     <link href="styles/default.css" rel="stylesheet">
