--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
     <div class="footer row">
       <div class="col-md-6">
-        <img class="logo" src="images/logo_alago_white.png">
+        <a href="map.html"><img class="logo" src="images/logo_alago_white.png"></a>
       </div>
       <div class="col-md-6"></div>
     </div>
