update ajustes carol

--- a/map.html
+++ b/map.html
@@ -43,6 +43,10 @@
     <link href="styles/default.css" rel="stylesheet">
     <link href="styles/map.css" rel="stylesheet">
     <link href="styles/profile_header.css" rel="stylesheet">
+
+    <!-- This is what you need -->
+    <script src="styles/dist/sweetalert-dev.js"></script>
+    <link rel="stylesheet" href="styles/dist/sweetalert.css">
   </head>
 
   <body>
@@ -218,11 +222,11 @@
                   <span class="bar"></span>
                   <label>Escreva uma descrição</label>
                 </div>
-            </div>
+              </div>
             </div>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn">enviar</button>
+            <button type="button" id="enviar" class="btn">enviar</button>
           </div>
         </div>
       </div>
