nova página de SOBRE

--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
               <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
               <li class="presentation"><a class="link vai-chover" href="weather.html">Vai chover?</a></li>
-              <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
+              <li class="presentation"><a class="link sobre active" href="about.html">Sobre</a></li>
               <li class="presentation profile"><a class="link login" id="logedOut" href="login.html">Login</a><a class="link login user" style="display:none" id="logedIn" href="profile.html"><img src="images/users/pati.jpg"><b>Pati Peti</b><!-- &nbsp;&nbsp;<i class="fa fa-chevron-down" aria-hidden="true"></i> --></a></li>
             </ul>
 
@@ -100,17 +100,66 @@
 	</div>
 
 	<div class="section row" id="section1">
+		<div class="col-md-6 section1-text section-mobile" style="display: none">
+			<center><img src="images/saved.png" /><h2>Favoritos</h2></center>
+			<b>Com os favoritos você adiciona e monitora seus pontos principais de onde estiver e fica atualizado em tempo real.</b>
+		</div>
 		<div class="col-md-6">
 			<div class="section1-image">
 				<img src="images/iphone2.png" alt="iphone" id="iphone2" />
 				<img src="images/iphone3.png" alt="iphone" id="iphone3" />
-				<!-- <img src="images/phone.png" alt="iphone" id="iphone4" /> -->
 			</div>
 		</div>
 
-		<div class="col-md-6 section1-text">
+		<div class="col-md-6 section1-text section-desktop">
 			<center><img src="images/saved.png" /><h2>Favoritos</h2></center>
 			<b>Com os favoritos você adiciona e monitora seus pontos principais de onde estiver e fica atualizado em tempo real.</b>
+		</div>
+	</div>
+
+	<div class="section row" id="section2">
+		<div class="col-md-12 section2-text section-mobile" style="display: none">
+			<h2>Estacionamento Seguro</h2><img src="images/flag.png" />
+			<b>Você estaciona seu carro e é avisado com antecedência caso seu carro corra algum risco de alagamento.</b>
+		</div>
+		<div class="col-md-12">
+			<div class="section2-image">
+				<img src="images/not.png"/>
+			</div>
+		</div>
+
+		<div class="col-md-12 section2-text section-desktop">
+			<h2>Estacionamento Seguro</h2><img src="images/flag.png" />
+			<b>Você estaciona seu carro e é avisado com antecedência caso seu carro corra algum risco de alagamento.</b>
+		</div>
+	</div>
+
+	<div class="section row" id="section3">
+		<div class="col-md-8">
+			<div class="section3-text">
+				<h1>+</h1>
+				<h3>Adicione pontos de alagamento</h3>
+				<b>Com o Sistema colaborativo você pode adicionar pontos de alagamento que encontrar pela cidade e ajudar as pessoas de sua cidade.</b><b>Simples, fácil e rápido</b>
+			</div>
+		</div>
+		<div class="col-md-4">
+			<div class="section3-image">
+				<img src="images/iphone5.png">
+			</div>
+		</div>
+	</div>
+
+	<div class="section row" id="section4">
+		<div class="col-md-12">
+			<div class="section4-image">
+				<img src="images/icon_144x144.png"/>
+			</div>
+		</div>
+
+		<div class="col-md-12 section4-text">
+			<h1>Comece a usar hoje mesmo!</h1>
+			<h3>Baixe agora na App Store.</h3>
+			<img src="images/app_store.png">
 		</div>
 	</div>
 
