--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
+<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <!-- modified CSS -->
     <link href="styles/default.css" rel="stylesheet">
