--- a/map.html
+++ b/map.html
@@ -86,7 +86,7 @@
       <div class="row">
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
-            <div class="col-md-8 col-xs-8 texts">
+            <div class="col-md-8 col-xs-8 texts yellow">
               <h4 class="title">Escola da Pati</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
@@ -97,7 +97,7 @@
         </div>
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
-            <div class="col-md-8 col-xs-8 texts">
+            <div class="col-md-8 col-xs-8 texts green">
               <h4 class="title">Escola da Peti</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
@@ -108,7 +108,7 @@
         </div>
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
-            <div class="col-md-8 col-xs-8 texts">
+            <div class="col-md-8 col-xs-8 texts red">
               <h4 class="title">Casa da Pati</h4>
               <h4 class="address">Rua da Princesa 111</h4>
             </div>
