--- a/profile.html
+++ b/profile.html
@@ -121,9 +121,9 @@
       <div class="col-md-10 favorites">
         <h1>Favoritos</h1>
         <div class='locals'>
-          <b>Casa da Joana</b>
-          <b>Casa do João</b>
-          <b>Escola do João</b>
+          <b id="casa">Casa</b>
+          <b id="escola">Escola das Crianças</b>
+          <b id="trabalho">Trabalho</b>
           <b>+</b>
         </div>
         <div class="input">
