--- a/map.html
+++ b/map.html
@@ -87,8 +87,8 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts yellow">
-              <h4 class="title">Escola da Pati</h4>
-              <h4 class="address">Rua da Princesa 111</h4>
+              <h4 class="title">Casa</h4>
+              <h4 class="address">Rua Francisco 36</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
               <img src="https://maps.googleapis.com/maps/api/staticmap?center=sao_paulo&size=90x70&zoom=15&style=element:labels|visibility:off&style=element:geometry.stroke|visibility:off&style=feature:landscape|element:geometry|saturation:-100&style=feature:water|saturation:-100|invert_lightness:true&key=AIzaSyCR2YRhZnjr0mDct_eYCHeW40p0sMt_ZDs">
@@ -98,8 +98,8 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts green">
-              <h4 class="title">Escola da Peti</h4>
-              <h4 class="address">Rua da Princesa 111</h4>
+              <h4 class="title">Escola</h4>
+              <h4 class="address">Rua Bartira 238</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
               <img src="https://maps.googleapis.com/maps/api/staticmap?center=jabaquara&size=90x70&zoom=15&style=element:labels|visibility:off&style=element:geometry.stroke|visibility:off&style=feature:landscape|element:geometry|saturation:-100&style=feature:water|saturation:-100|invert_lightness:true&key=AIzaSyCR2YRhZnjr0mDct_eYCHeW40p0sMt_ZDs">
@@ -120,8 +120,8 @@
         <div class="col-md-2 col-lg-3 favorite-box">
           <div class="favorite">
             <div class="col-md-8 col-xs-8 texts">
-              <h4 class="title">Trabalho da Peti</h4>
-              <h4 class="address">Rua da Princesa 111</h4>
+              <h4 class="title">Trabalho</h4>
+              <h4 class="address">Rua Maranhão 54</h4>
             </div>
             <div class="col-md-4 col-xs-4 map-image">
               <img src="https://maps.googleapis.com/maps/api/staticmap?center=jundiai&size=90x70&zoom=15&style=element:labels|visibility:off&style=element:geometry.stroke|visibility:off&style=feature:landscape|element:geometry|saturation:-100&style=feature:water|saturation:-100|invert_lightness:true&key=AIzaSyCR2YRhZnjr0mDct_eYCHeW40p0sMt_ZDs">
