--- a/map.html
+++ b/map.html
@@ -66,7 +66,7 @@
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav alago-links">
               <li class="logo"><a href="index.html"><img id="logo" href="/" src="images/logo_alago.png"></a></li>
-              <li class="presentation"><a class="link mapa" href="map.html">Mapa</a></li>
+              <li class="presentation"><a class="link mapa active" href="map.html">Mapa</a></li>
               <li class="presentation"><a class="link vai-chover" href="weather.html">Vai chover?</a></li>
               <li class="presentation"><a class="link sobre" href="about.html">Sobre</a></li>
               <li class="presentation profile"><a class="link login" id="logedOut" href="login.html">Login</a><a class="link login user" style="display:none" id="logedIn" href="profile.html"><img src="images/users/pati.jpg"><b>Pati Peti</b><!-- &nbsp;&nbsp;<i class="fa fa-chevron-down" aria-hidden="true"></i> --></a></li>
