--- a/map.html
+++ b/map.html
@@ -39,7 +39,7 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
-
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link href="styles/default.css" rel="stylesheet">
     <link href="styles/map.css" rel="stylesheet">
     <link href="styles/profile_header.css" rel="stylesheet">
