--- a/index.html
+++ b/index.html
@@ -48,7 +48,11 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
+    
+    <!-- Fontes -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
     <!-- modified CSS -->
     <link href="styles/default.css" rel="stylesheet">
