--- a/about.html
+++ b/about.html
@@ -43,8 +43,10 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
-<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    <!-- Fontes -->
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+
     <!-- modified CSS -->
     <link href="styles/default.css" rel="stylesheet">
     <link href="styles/about.css" rel="stylesheet">
