--- a/profile.html
+++ b/profile.html
@@ -59,7 +59,11 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
-<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    
+    <!-- Fontes -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
+    
     <!-- modified CSS -->
     <link href="styles/default.css" rel="stylesheet">
     <link href="styles/profile.css" rel="stylesheet">
