--- a/login.html
+++ b/login.html
@@ -47,6 +47,10 @@
       ga('create', 'UA-100130231-1', 'auto');
       ga('send', 'pageview');
     </script>
+    
+    <!-- Fontes -->
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
+    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 
     <!-- modified CSS -->
     <link href="styles/login.css" rel="stylesheet">
