--- a/about.html
+++ b/about.html
@@ -109,8 +109,8 @@
 		</div>
 		<div class="col-md-6">
 			<div class="section1-image">
-				<img src="images/iphone2.png" alt="iphone" id="iphone2" />
-				<img src="images/iphone3.png" alt="iphone" id="iphone3" />
+				<img src="images/iphones.png" alt="iphone" id="iphone2" />
+				<!-- <img src="images/iphone3.png" alt="iphone" id="iphone3" /> -->
 			</div>
 		</div>
 
