update de perfil do modal

--- a/map.html
+++ b/map.html
@@ -189,8 +189,10 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <img src="images/users/pati.jpg">
-            <span class="modal-title">Pati Peti</span>
+            <!-- <img src="images/users/pati.jpg"> -->
+            <!-- <span class="modal-title">Pati Peti</span> -->
+            <img id="picture" src="images/users/default.png">
+            <span id="name" class="modal-title"></span>
           </div>
           <div class="modal-body row">
             <h1>Alagou!</h1>
